# luna-orm

./: .clocignore  .gitignore  Cargo.toml  DESIGN.md  README.md  lines.sh
examples/crud/: Cargo.toml
examples/crud/src/: main.rs
examples/mysql/: Cargo.toml
examples/sqlite/: Cargo.toml
examples/template/: Cargo.toml
examples/transaction/: Cargo.toml
luna-orm/: Cargo.toml
luna-orm-axum/: Cargo.toml
luna-orm-axum/src/: generator.rs  handler.rs  lib.rs  middleware.rs  request.rs  router.rs  schema.rs
luna-orm-axum/tests/: axum_router.rs  schema.rs
luna-orm-dynamic/: Cargo.toml
luna-orm-dynamic/src/: active_entity.rs  active_json.rs  lib.rs
luna-orm-dynamic/tests/: field.rs  record.rs
luna-orm-macro/: Cargo.toml
luna-orm-macro/src/: auto_entity.rs  entity.rs  field_utils.rs  fields_parser.rs  lib.rs  location.rs  mutation.rs  order_by.rs  primary.rs  selected_entity.rs  selection.rs  template_record.rs  type_extract.rs  utils.rs
luna-orm-trait/: Cargo.toml
luna-orm-trait/src/: field.rs  lib.rs  lib2.rs  location.rs  parser.rs  request.rs  schema.rs  schema_trait.rs  transaction.rs  utils.rs  v2.rs
luna-orm-trait/src/database/: lib.rs  mod.rs  mysql.rs
luna-orm-trait/tests/: schema_trait_test.rs  trait_test.rs
luna-orm/src/: command_executor2.rs  error.rs  lib.rs  sql_executor2.rs  sql_generator2.rs
luna-orm/src/database/: mod.rs  mysql.rs  postgres.rs  sqlite.rs  sqlite2.rs
luna-orm/src/database/mysql/: MySqlInputGenerator.rs
luna-orm/tests/: create.rs  location.rs  schema_trait_test.rs  timer.rs  transaction_test.rs
luna-orm/tests/common/: mod.rs
luna-types/: Cargo.toml  README.md
luna-types/src/: lib.rs  record.rs
luna-types/src/constraint/: common.rs  error.rs  integer.rs  mod.rs  named.rs  string.rs
luna-types/src/constraint/supports/: datetime.rs  string.rs
luna-types/src/field/: integer.rs  mod.rs  named.rs  string.rs  supported.rs
luna-types/src/field/supports/: integer.rs  mod.rs  string.rs
luna-types/src/record/: entity_record.rs  record.rs
luna-types/src/sqlx/: field.rs  integer.rs  mod.rs
luna-types/src/sqlx/supports/: integer.rs
luna-types/tests/: constraint.rs  field.rs  integer.rs  string.rs
next/: .env  Cargo.toml  lines.sh  plan.md
next/taitan-orm/: Cargo.toml  README.md
next/taitan-orm-macro/: Cargo.toml
next/taitan-orm-macro/src/: lib.rs  schema.rs  template.rs
next/taitan-orm-macro/src/attrs/: attr_parser.rs  mod.rs
next/taitan-orm-macro/src/expands/: entity_expander.rs  location_expander.rs  mod.rs  mutation_expander.rs  ordering_expander.rs  selected_expander.rs  selection_expander.rs  template_expander.rs  unique_expander.rs
next/taitan-orm-macro/src/fields/: entity_parser.rs  field_mapper.rs  fields_filter.rs  fields_mapper.rs  location_parser.rs  mapper.rs  mod.rs  mutation_parser.rs  parser.rs  selected_parser.rs  selection_parser.rs  table_name_parser.rs  unique_parser.rs
next/taitan-orm-macro/src/fields/mappers/: args_add_constructor.rs  args_constructor.rs  mod.rs  names_add_constructor.rs  names_constructor.rs  row_constructor.rs  row_get_constructor.rs  struct_constructor.rs  struct_field_constructor.rs
next/taitan-orm-macro/src/types/: checker.rs  extractor.rs  mod.rs
next/taitan-orm-macro/src/util/: copy_struct.rs  life_time_checker.rs  mod.rs  utils.rs
next/taitan-orm-trait/: Cargo.toml
next/taitan-orm-trait/src/: entity.rs  error.rs  field.rs  lib.rs  mutation.rs  optional.rs  order_by.rs  primary.rs  schema.rs  selected.rs  selection.rs  template_record.rs  unique.rs  update_command.rs  write_command.rs
next/taitan-orm-trait/src/join/: from_clause.rs  joined_condition.rs  joined_condition_array.rs  joined_condition_part.rs  joined_conditions.rs  joined_field.rs  joined_mode.rs  joined_query.rs  mod.rs
next/taitan-orm-trait/src/location/: cmp_operator.rs  located_query.rs  location.rs  location_expr.rs  mod.rs
next/taitan-orm-trait/src/page/: count_sql.rs  mod.rs  page_info.rs  paged_info.rs  paged_list.rs  pagination.rs
next/taitan-orm-trait/src/template/: mod.rs  parsed_template_sql.rs  parser.rs  template_value.rs
next/taitan-orm/src/: db.rs  error.rs  extractor.rs  lib.rs  result.rs  sql_api.rs  sql_executor.rs  sql_generator.rs  sql_generator_container.rs  sql_generic_executor.rs
next/taitan-orm/src/api/: mod.rs  reader.rs  template.rs  writer.rs
next/taitan-orm/src/api_macro/: executor.rs  mod.rs  read.rs  template.rs  transaction.rs  write.rs
next/taitan-orm/src/database/: mod.rs
next/taitan-orm/src/database/mysql/: database.rs  extractor.rs  mod.rs
next/taitan-orm/src/database/mysql/commanders/: mod.rs  read.rs  template.rs  write.rs
next/taitan-orm/src/database/postgres/: database.rs  extractor.rs  mod.rs  transaction.rs
next/taitan-orm/src/database/postgres/commanders/: read.rs  template.rs  write.rs
next/taitan-orm/src/database/sqlite/: commander.rs  config.rs  database.rs  executor.rs  extractor.rs  mod.rs  sqlite_config.rs  transaction.rs
next/taitan-orm/src/database/sqlite/commanders/: mod.rs  read.rs  read_commander.rs  template.rs  template_commander.rs  write.rs  write_commander.rs
next/taitan-orm/src/dto/: count.rs  mod.rs  paged_list.rs
next/taitan-orm/tests/: integration_tests.rs  sql_commander_spec.rs  sql_executor_spec.rs  transaction_spec.rs
next/taitan-orm/tests/entities/: mod.rs  user.rs  user2.rs  user3.rs
next/taitan-orm/tests/macros/: entity_spec.rs  execute_loop.rs  mod.rs  template_spec.rs
next/taitan-orm/tests/sqlite/: mod.rs  sql_commander_spec.rs  sql_executor_spec.rs  transaction_spec.rs
old/luna-orm-dynamic/: Cargo.toml
old/luna-orm-macro/: Cargo.toml
old/luna-orm-trait/: Cargo.toml  README.md
old/script/: lines.sh
src/: command_executor.rs  database.rs  error.rs  lib.rs  mapper.rs  sql_executor.rs  sql_generator.rs  transaction.rs
src/database/: lib.rs  mod.rs  mysql.rs  postgres.rs  (+1 more)
tests/: auto_entity_test.rs  create.rs  database_test.rs  entity.rs  entity_test.rs  insert.rs  joined_test.rs  location.rs  macro_test.rs  mapper_test.rs  schema_test.rs  transaction_test.rs
(+65 files in other folders)
