[package]
name = "luna-orm"
version = "0.2.0"
edition = "2021"
license-file = "LICENSE"
description = "ORM based on sqlx"
homepage = "https://github.com/thegenius/luna-orm"

[dependencies]
luna-orm-trait = { path = "luna-orm-trait", version = "0.2.0" }
luna-orm-macro = { path = "luna-orm-macro", version = "0.2.0" }
thiserror = {workspace = true}
sqlx = {workspace = true}
async-trait = {workspace = true}
path-absolutize = {workspace = true}

[dev-dependencies]
async-trait = {workspace = true}
tokio = {workspace = true}
serde = {workspace = true}
serde_json = {workspace = true}
serde_yaml = {workspace = true}
sqlx = {version = "0.7.3", features = ["runtime-tokio", "mysql",  "sqlite", "macros", "any"]}

[workspace]
members = [
  ".",
  "luna-orm-trait", 
  "luna-orm-macro"
]

[workspace.package]
version = "0.2.0"


[workspace.dependencies]
thiserror = {version = "1.0"}
async-trait = {version = "0.1.74"}
serde = {version = "1.0", features = ["derive"]}
serde_with = { version = "3.4.0" }
sqlx = {version = "0.7.3", features = ["mysql", "sqlite", "any"]}
path-absolutize = "3.1.1"
typetag = "0.2"

tokio = {version = "1.34.0", features = ["full"]}
serde_json = "1.0"
serde_yaml = "0.9.27"
nom = "7.1.3"

runtime-fmt = "0.4.1"
