[package]
name = "luna-orm-dynamic"
edition = "2021"
version.workspace = true
rust-version.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = {workspace = true}
axum-macros = {workspace = true}
tokio = {workspace = true}
serde = {workspace = true}
serde_yaml = {workspace = true}
serde_json = {workspace = true}
case = {workspace = true}
rust-format = {workspace = true}
tera = {workspace = true}
http-body-util = {workspace = true}

sqlx = {workspace = true}

luna-orm-trait = { path = "../luna-orm-trait", version = "0.3.6" }
luna-orm = { path = "../luna-orm", version = "0.3.6" }
luna-types = {path = "../luna-types", version = "0.3.6"}


[dev-dependencies]
sqlx = {version = "0.7.3", features = ["runtime-tokio", "mysql",  "sqlite", "macros", "any"]}
