[package]
name = "luna-orm-macro"
version = "0.1.0"
edition = "2021"
license-file = "LICENSE"
description = "ORM based on sqlx"
homepage = "https://github.com/thegenius/FastORM"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
quote = "1.0"
syn = { version = "1.0", features = ["full"] }
proc-macro2 = "1.0"

luna-orm-trait = { path = "../luna-orm-trait", version = "0.1.0" }
sqlx = { version = "0.7.2", features = [ "runtime-tokio", "sqlite", "mysql", "macros", "any"] }
