[package]
name = "luna-orm-macro"
version = {workspace = true}
edition = "2021"
license-file = "LICENSE"
description = "ORM based on sqlx"
homepage = "https://github.com/thegenius/luna-orm"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
quote = "1.0"
syn = { version = "1.0", features = ["full"] }
proc-macro2 = "1.0"
case = "1.0"

luna-orm-trait = { path = "../luna-orm-trait", version = "0.3.0" }
sqlx = { workspace = true }
