[package]
name = "luna-orm-trait"
version = "0.2.0"
edition = "2021"
license-file = "LICENSE"
description = "ORM based on sqlx"
homepage = "https://github.com/thegenius/luna-orm"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sqlx = { workspace = true }
async-trait = { workspace = true }
serde = { workspace = true }
