[package]
name = "luna-orm-trait"
version = {workspace = true }
edition = "2021"
license-file = "LICENSE"
description = "ORM based on sqlx"
homepage = "https://github.com/thegenius/luna-orm"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tracing = {workspace = true}
sqlx = { workspace = true }
#async-trait = { workspace = true }
serde = { workspace = true }
serde_with = {workspace = true}
typetag = {workspace = true}
nom = {workspace = true}

[dev-dependencies]
tokio = {workspace = true}
serde_json = {workspace = true}
