[package]
name = "luna-orm"
version = { workspace = true }
edition = "2021"
license-file = "LICENSE"
description = "ORM based on sqlx"
homepage = "https://github.com/thegenius/luna-orm"

[dependencies]
luna-orm-trait = { path = "../luna-orm-trait", version = "0.3.6" }
luna-orm-macro = { path = "../luna-orm-macro", version = "0.3.6" }
thiserror = {workspace = true}
sqlx = {workspace = true}
path-absolutize = {workspace = true}
tracing = {workspace = true}

[dev-dependencies]
tracing-test = {workspace = true}
tracing-subscriber = {workspace = true}
tokio = {workspace = true}
serde = {workspace = true}
serde_json = {workspace = true}
serde_yaml = {workspace = true}
sqlx = {version = "0.7.3", features = ["runtime-tokio", "mysql",  "sqlite", "macros", "any"]}


[profile.test]
test-threads = 1
