[package]
name = "luna-orm"
version = { workspace = true }
edition = "2021"
license-file = "LICENSE"
description = "ORM based on sqlx"
homepage = "https://github.com/thegenius/luna-orm"
rust-version = {workspace = true}

[dependencies]
luna-orm-trait = { path = "../luna-orm-trait" }
luna-orm-macro = { path = "../luna-orm-macro" }
thiserror = {workspace = true}
sqlx = {workspace = true}
path-absolutize = {workspace = true}
tracing = {workspace = true}

[dev-dependencies]
tracing-test = {workspace = true}
tracing-subscriber = {workspace = true}
tokio = {workspace = true}
serde = {workspace = true}
serde_json = {workspace = true}
serde_yaml = {workspace = true}
sqlx = {version = "0.8.2", features = ["runtime-tokio", "mysql",  "sqlite", "macros", "any"]}
time = { version = "0.3", features = ["macros", "serde"] }
uuid = { version = "1.11.0", features = ["v4", "serde"] }

[profile.test]
test-threads = 1
