[package]
name = "luna-types"
edition = "2021"
version.workspace = true
rust-version.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = {workspace = true}
serde_json = {workspace = true}
serde_regex = {workspace = true}
regex = {workspace = true}
derive_builder = {workspace = true}
num-traits = {workspace = true}


sqlx = {workspace = true}
sqlx-core = {workspace = true}
