[workspace]
members = [
    "taitan-orm",
    "taitan-orm-macro",
    "taitan-orm-trait",
]
resolver = "2"

default-members = [
    "taitan-orm"
]

[workspace.package]
version = "0.1.0"
rust-version = "1.83"


[workspace.dependencies]
sqlx = {version = "0.8.2", features = ["runtime-tokio", "mysql", "sqlite", "postgres", "bigdecimal", "time", "uuid"]}

time = {version = "0.3.37", features = ["macros", "serde"]}
bigdecimal = { version = "0.4.6", features = ["serde"] }
uuid = { version = "1.11.0", features = ["v4", "serde"] }

tokio = {version = "1.34.0", features = ["full"]}

tracing = {version = "0.1", features = ["max_level_trace", "release_max_level_info"] }
tracing-test = {version = "0.2"}
tracing-subscriber = {version ="0.3.18"}
derive_builder = "0.13.0"

serde = {version = "1.0", features = ["derive"]}
serde_with = { version = "3.4.0" }
serde_regex = "1.1.0"
serde_json = "1.0"
serde_yaml = "0.9.27"
regex = "1.10.3"

axum = {version = "0.7.4"}
axum-macros = {version = "0.4.1"}
http-body-util = {version = "0.1.0"}
chrono = { version = "0.4.38", features = ["serde"]}

tower = { version = "0.4.13", default-features = false, features = ["util"] }
tower-layer = "0.3.2"
tower-service = "0.3"

case = {version = "1.0"}
rust-format = {version = "0.3.4"}
tera = {version = "1.19"}

num = "0.4.1"
num-traits = "0.2.17"


thiserror = {version = "2.0.4"}
path-absolutize = { version = "3.1.1"}
typetag = { version= "0.2"}
nom = { version = "7.0.0" }
runtime-fmt = { version = "0.4.1"}

