[package]
name = "crud"
edition = "2021"
version.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
luna-orm = "0.3.2"
#luna-orm-trait = "0.3.1"
#luna-orm-macro = "0.3.1"
sqlx = { version = "0.7", features = [ "runtime-tokio" ] }
tokio = { version = "1.35.1", features = ["full"] }
