[package]
name = "taitan-orm-macro"
edition = "2021"
version.workspace = true
rust-version.workspace = true


[lib]
proc-macro = true

[dependencies]
quote = "1.0"
syn = { version = "2.0.90", features = ["full"] }
proc-macro2 = "1.0"
case = "1.0"
darling = "0.20.10"

taitan-orm-trait = { path = "../taitan-orm-trait" }