[package]
name = "taitan-orm"
edition = "2021"
version.workspace = true
rust-version.workspace = true

[dependencies]
taitan-orm-trait = { path = "../taitan-orm-trait" }
sqlx = {workspace = true}
serde = {workspace = true}
time = {workspace = true}
uuid = {workspace = true}
tracing = {workspace = true}
thiserror = {workspace = true}
path-absolutize = {workspace = true}

[dev-dependencies]



