[package]
name = "taitan-orm"
edition = "2021"
version.workspace = true
rust-version.workspace = true

[dependencies]
taitan-orm-trait = { path = "../taitan-orm-trait" }
taitan-orm-macro = { path = "../taitan-orm-macro" }
sqlx = {workspace = true}
serde = {workspace = true}
time = {workspace = true}
uuid = {workspace = true}
tracing = {workspace = true}
thiserror = {workspace = true}
path-absolutize = {workspace = true}
rinja = "0.3.5"
bit-vec = "0.8.0"

[dev-dependencies]






